# modified-ALT

./: .gitignore  CMakeLists.txt  README.md  modified-ALT
data/: results.txt
include/: Dijkstra.h  Edge.h  Graph.h  GraphParser.h  benchmark.h  cli.h
src/: CMakeLists.txt  Dijkstra.cpp  Edge.cpp  Graph.cpp  GraphParser.cpp  benchmark.cpp  cli.cpp  main.cc  main.cpp
src/algorithms/: ALT.cpp  ALT.h  CMakeLists.txt  alt.cc  dijkstra.cc  dijkstra.cpp  dijkstra.h  modified-alt.cc  new_ALT.cpp  new_ALT.h
src/app/: CMakeLists.txt  app.cpp  app.h
src/benchmark/: bench_utils.cc  benchmark.cc
src/benchmarking/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmark_file_generator.cpp  benchmark_file_generator.h  benchmark_runner.cpp
src/cli/: CMakeLists.txt  cli.cpp  cli.h
src/graph/: CMakeLists.txt  edge.cpp  edge.h  graph.cc  graph.cpp  graph.h  graph_parser.cc  graph_parser.cpp  graph_parser.h  graph_partitioner.cc
src/include/: CMakeLists.txt  constants.h  utils.h
src/include/algorithms/: alt.h  dijkstra.h  modified-alt.h
src/include/benchmark/: bench_utils.h  benchmark.h
src/include/graph/: graph.h  graph_parser.h  graph_partitioner.h
src/include/preprocessing/: alt_preprocessing.h  data_types.h  distance_calculation.h  farthest.h  landmark_selection.h  ldv_serializer.h  modified-alt_preprocessing.h  modified_alt_data_serializer.h  utils.h
src/preprocessing/: CMakeLists.txt  alt_preprocessing.cc  distance_calculation.cc  farthest.cc  farthest.cpp  farthest.h  landmark_selection.cc  ldv_serializer.cc  modified-alt_preprocessing.cc  modified_alt_data_serializer.cc  new.cpp  new.h  random_landmarks.cpp  random_landmarks.h  utils.cc
tests/: CMakeLists.txt  test_graph.cc  test_random_preprocessing.cc
